# GaPT

./: README.md  requirements.txt  setup.py
Cpp/: package.xml
Cpp/launch/: model_params.yaml  model_params_drag.yaml  test.launch
base/: __init__.py
base/data/: base_dataset.py  data_loader.py  data_sampler.py
base/gapt/kalman/: __init__.py  k_filters.py
base/gapt/kernels/: __init__.py  base_kernel.py
base/gapt/kernels/matern/: base_matern.py  k_matern12.py  k_matern32.py  k_matern52.py
base/gapt/kernels/periodic/: k_periodic.py
base/gapt/kernels/rbf/: k_rbf.py
base/gpytgp/: gppyt_model.py  gppyt_trainer.py
base/pssgp/kalman/: __init__.py  k_filters.py
base/pssgp/kernels/: __init__.py  base_kernel.py
base/pssgp/kernels/matern/: __init__.py  base_matern.py  k_matern12.py  (+2 more)
base/regressor/: __init__.py  base_regressor.py
configs/: __init__.py  config_parsers.py  logger_conf.json  matplotlib_conf.json
data/arpl/test/: oval_10.csv
data/arpl/train/: circle_10.csv
experiments/drag/: residual_arpl_miso.json  residual_arpl_miso.py  residual_arpl_siso.json  residual_arpl_siso.py
experiments/timing/: inference_time_miso_rt.json  inference_time_miso_rt.py  inference_time_siso_rt.json  inference_time_siso_rt.py
model/datasets/: __init__.py  arpl.py
model/regressors/: __init__.py  materns.py  periodic.py  rbf.py
ros_gp_kalman/: CMakeLists.txt  README.md
ros_gp_kalman/include/: GP_kalmann.h
ros_gp_kalman/launch/: model_params.yaml
ros_gp_kalman/src/: GP_kalmann.cpp  demo.cpp
tools/: dsp_utils.py  file_utils.py  math_utils.py  misc.py
(+2 files in other folders)
